# ZenNotes-rs

./: .gitignore  BUILD.md  GAP-ANALYSIS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
crates/synnotes-core/: Cargo.toml
crates/synnotes-core/src/: lib.rs  search.rs
crates/synnotes-core/src/vault/: assets.rs  comments.rs  config.rs  crud.rs  demo_tour.rs  folders.rs  layout.rs  listing.rs  notes.rs  settings.rs  tasks.rs  templates.rs
crates/zen-cli/: Cargo.toml
crates/zen-cli/src/: main.rs
packaging/arch/: .SRCINFO  .gitignore  PKGBUILD  README.md  syncnotes.desktop  zennotes-rs.desktop
src/: main.tsx
src-tauri/: Cargo.toml  demo-tour-data.json  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_config.rs  asset_protocol.rs  custom_css.rs  deep_links.rs  lib.rs  link_metadata.rs  main.rs  os.rs  remote.rs  search.rs  secrets.rs  state.rs  vault.rs  watcher.rs  windows.rs
src-tauri/src/ipc/: mod.rs  os_cmds.rs  types.rs  vault_cmds.rs  window_cmds.rs  workspace_cmds.rs
src-tauri/src/vault/: assets.rs  comments.rs  config.rs  crud.rs  demo_tour.rs  layout.rs  listing.rs  metadata.rs  mod.rs  notes.rs  settings.rs  tasks.rs  templates.rs
src/bridge/: asset-url.ts  capabilities.ts  custom-css.ts  databases.ts  drag-region.ts  portable-config.ts  tauri-bridge.ts
