[package]
name = "synnotes"
version = "2.1.0"
description = "SynNotes desktop — a Tauri port of ZenNotes"
authors = ["SynNotes"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "synnotes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
synnotes-core = { path = "../crates/synnotes-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify-debouncer-full = "0.3"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
font-kit = "0.14"
base64 = "0.22"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
