[package]
name = "zennotes-rs"
version = "2.1.0"
description = "ZenNotes-rs desktop — a Tauri port of ZenNotes"
authors = ["ZenNotes-rs"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "zennotes_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fancy-regex = "0.14"
notify-debouncer-full = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
urlencoding = "2"
url = "2"
ureq = "2"
font-kit = "0.14"
base64 = "0.22"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
