[package]
name = "synnotes-core"
version = "2.1.0"
description = "Shared vault domain logic for SynNotes (desktop app + zen CLI)"
edition = "2021"
rust-version = "1.77"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fancy-regex = "0.14"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
